--- a/style.css
+++ b/style.css
@@ -65,6 +65,18 @@ body {
     justify-content: center;
 }
 
+@media (max-width: 1000px) {
+    .shop {
+        grid-template-columns: repeat(2, 223px);
+    }
+}
+
+@media (max-width: 500px) {
+    .shop {
+        grid-template-columns: repeat(1, 223px);
+    }
+}
+
 .item {
     border: 4px solid var(--lilac);
     border-radius: 12px;
