--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 /**
@@ -93,12 +93,14 @@ body {
     flex-direction: column;
     padding: 10px;
     gap: 10px;
+    height: 200px;
 }
 
 .price-quantity {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: auto;
 }
 
 .buttons {
