--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,11 @@ i {
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+    color: var(--text);
+}
+
 /**
 * ! Navbar styles are here
 **/
@@ -120,4 +125,49 @@ i {
 
 .bi-plus-lg {
     color: var(--text)
+}
+
+/**
+* ! style rules for labels and buttons
+**/
+
+.text-center {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.HomeBtn {
+    background-color: var(--light-purple);
+    color: var(--text);
+    border: none;
+    padding: 6px;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.bi-x-lg {
+    color: var(--red);
+    font-weight: bold;
+}
+
+/**
+* ! style rules for shopping-cart
+**/
+
+.shopping-cart {
+    display: grid;
+    grid-template-columns: repeat(1, 320px);
+    justify-content: center;
+    gap: 15px;
+}
+
+/**
+* ! style rules for cart-item
+**/
+
+.cart-item {
+    border: 4px solid var(--lilac);
+    border-radius: 12px;
+    display: flex;
 }
